Ver memorais publicas

--- a/backend/static/uploads/reports/31/report_31.html
+++ b/backend/static/uploads/reports/31/report_31.html
@@ -685,7 +685,7 @@
     <div class="simple-content"><p>La visión de la ciudad califal de Medina Azahara se proyecta como un símbolo eterno del esplendor, la sofisticación y la hegemonía del califato omeya en al-Ándalus. Concebida como un centro monumental del poder califal, Medina Azahara aspira a ser reconocida no solo como un emblema de opulencia arquitectónica, sino como un faro cultural, intelectual y diplomático que perdure a lo largo de los siglos.</p><p>A través de la preservación y restauración de sus estructuras, la ciudad busca consolidarse como un referente patrimonial universal, donde la grandeza del arte islámico y la avanzada ingeniería medieval sean contempladas como un legado imperecedero. En este sentido, Medina Azahara se erige no solo como un testimonio histórico, sino como un motor cultural que impulse el conocimiento, el estudio y la difusión del esplendor cordobés, integrando el pasado con el presente y proyectándolo hacia el futuro.</p><p>En la actualidad, la visión de Medina Azahara se centra en revitalizar su impacto cultural, promoviendo iniciativas educativas, turísticas y científicas que fomenten la apreciación del patrimonio andalusí y el entendimiento de su relevancia histórica a nivel mundial. De este modo, Medina Azahara no solo se consolida como un ícono del califato omeya, sino como un epicentro del diálogo intercultural y la reflexión sobre el legado islámico en la península ibérica.</p></div>
 </div>
         <a id="valores"></a>
-        <built-in method values of dict object at 0x000001DA4AC58A40>
+        <built-in method values of dict object at 0x00000158AC867A80>
         <a id="normativa"></a>
         <div class="page" style="background-color: #FFFFFF;">
     <style>
