--- a/backend/static/uploads/reports/5/report_5.html
+++ b/backend/static/uploads/reports/5/report_5.html
@@ -664,7 +664,7 @@
     <div class="simple-content"><p>La visión de la Mezquita-Catedral es consolidarse como un referente universal de diálogo cultural, espiritual y patrimonial, proyectando su esencia única como un símbolo de coexistencia y diversidad. Se aspira a convertirla en un espacio de reflexión y encuentro que invite a los visitantes a profundizar en el legado histórico y artístico que une a Oriente y Occidente, a través de una estructura que fusiona la magnificencia islámica con la majestuosidad cristiana.</p><p>En este sentido, se propone fomentar un modelo de gestión sostenible que integre la preservación del patrimonio con el desarrollo cultural, potenciando actividades educativas, artísticas y espirituales que resalten la riqueza multicultural de la Mezquita-Catedral. Asimismo, se busca fortalecer la conexión con la comunidad local, posicionándola como un epicentro de inspiración y aprendizaje, donde la historia cobra vida a través de experiencias inmersivas que invitan a explorar los valores universales de tolerancia, respeto y convivencia pacífica.</p><p>A largo plazo, la Mezquita-Catedral aspira a ser reconocida no solo como un monumento arquitectónico excepcional, sino como un faro de unión entre civilizaciones, un puente entre pasados aparentemente irreconciliables y un testimonio vivo del poder transformador del entendimiento humano.</p></div>
 </div>
         <a id="valores"></a>
-        <built-in method values of dict object at 0x00000271DC55D280>
+        <built-in method values of dict object at 0x0000027E5949DF40>
         <a id="normativa"></a>
         <div class="page" style="background-color: #FFFFFF;">
     <style>
